Add header to csv

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -61,103 +61,154 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>9.092223</td>\n",
-       "      <td>181.101509</td>\n",
-       "      <td>17978.986339</td>\n",
-       "      <td>6.546600</td>\n",
-       "      <td>310.135738</td>\n",
-       "      <td>398.410813</td>\n",
-       "      <td>11.558279</td>\n",
-       "      <td>31.997993</td>\n",
-       "      <td>4.075075</td>\n",
-       "      <td>0</td>\n",
+       "      <th>count</th>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
+       "      <td>2009.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5.584087</td>\n",
-       "      <td>188.313324</td>\n",
-       "      <td>28748.687739</td>\n",
-       "      <td>7.544869</td>\n",
-       "      <td>326.678363</td>\n",
-       "      <td>280.467916</td>\n",
-       "      <td>8.399735</td>\n",
-       "      <td>54.917862</td>\n",
-       "      <td>2.559708</td>\n",
-       "      <td>0</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>1006.000000</td>\n",
+       "      <td>7.086581</td>\n",
+       "      <td>195.960048</td>\n",
+       "      <td>21904.616822</td>\n",
+       "      <td>7.133862</td>\n",
+       "      <td>333.199592</td>\n",
+       "      <td>426.508172</td>\n",
+       "      <td>14.355910</td>\n",
+       "      <td>66.383822</td>\n",
+       "      <td>3.969169</td>\n",
+       "      <td>0.403186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>10.223862</td>\n",
-       "      <td>248.071735</td>\n",
-       "      <td>28749.716544</td>\n",
-       "      <td>7.513408</td>\n",
-       "      <td>393.663396</td>\n",
-       "      <td>283.651634</td>\n",
-       "      <td>13.789695</td>\n",
-       "      <td>84.603556</td>\n",
-       "      <td>2.672989</td>\n",
-       "      <td>0</td>\n",
+       "      <th>std</th>\n",
+       "      <td>580.092665</td>\n",
+       "      <td>1.572955</td>\n",
+       "      <td>32.648709</td>\n",
+       "      <td>8627.545029</td>\n",
+       "      <td>1.585474</td>\n",
+       "      <td>41.217984</td>\n",
+       "      <td>80.709632</td>\n",
+       "      <td>3.325352</td>\n",
+       "      <td>16.067261</td>\n",
+       "      <td>0.780527</td>\n",
+       "      <td>0.490660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>8.635849</td>\n",
-       "      <td>203.361523</td>\n",
-       "      <td>13672.091764</td>\n",
-       "      <td>4.563009</td>\n",
-       "      <td>303.309771</td>\n",
-       "      <td>474.607645</td>\n",
-       "      <td>12.363817</td>\n",
-       "      <td>62.798309</td>\n",
-       "      <td>4.401425</td>\n",
-       "      <td>0</td>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.227499</td>\n",
+       "      <td>73.492234</td>\n",
+       "      <td>320.942611</td>\n",
+       "      <td>1.390871</td>\n",
+       "      <td>129.000000</td>\n",
+       "      <td>201.619737</td>\n",
+       "      <td>2.200000</td>\n",
+       "      <td>8.577013</td>\n",
+       "      <td>1.450000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>11.180284</td>\n",
-       "      <td>227.231469</td>\n",
-       "      <td>25484.508491</td>\n",
-       "      <td>9.077200</td>\n",
-       "      <td>404.041635</td>\n",
-       "      <td>563.885481</td>\n",
-       "      <td>17.927806</td>\n",
-       "      <td>71.976601</td>\n",
-       "      <td>4.370562</td>\n",
-       "      <td>0</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>504.000000</td>\n",
+       "      <td>6.090016</td>\n",
+       "      <td>176.736376</td>\n",
+       "      <td>15613.160533</td>\n",
+       "      <td>6.137757</td>\n",
+       "      <td>307.621462</td>\n",
+       "      <td>366.802484</td>\n",
+       "      <td>12.120956</td>\n",
+       "      <td>55.947322</td>\n",
+       "      <td>3.442848</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1006.000000</td>\n",
+       "      <td>7.027297</td>\n",
+       "      <td>197.191839</td>\n",
+       "      <td>20920.251561</td>\n",
+       "      <td>7.140122</td>\n",
+       "      <td>332.196048</td>\n",
+       "      <td>423.455906</td>\n",
+       "      <td>14.322019</td>\n",
+       "      <td>66.421884</td>\n",
+       "      <td>3.966571</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1508.000000</td>\n",
+       "      <td>8.052894</td>\n",
+       "      <td>216.454108</td>\n",
+       "      <td>27172.893573</td>\n",
+       "      <td>8.110140</td>\n",
+       "      <td>359.268543</td>\n",
+       "      <td>482.294404</td>\n",
+       "      <td>16.682025</td>\n",
+       "      <td>77.286551</td>\n",
+       "      <td>4.513201</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>317.338124</td>\n",
+       "      <td>56488.672413</td>\n",
+       "      <td>13.127000</td>\n",
+       "      <td>481.030642</td>\n",
+       "      <td>753.342620</td>\n",
+       "      <td>27.006707</td>\n",
+       "      <td>124.000000</td>\n",
+       "      <td>6.494749</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   1  8.316765884214679  214.3733940856225  22018.41744077529  \\\n",
-       "0  2           9.092223         181.101509       17978.986339   \n",
-       "1  3           5.584087         188.313324       28748.687739   \n",
-       "2  4          10.223862         248.071735       28749.716544   \n",
-       "3  5           8.635849         203.361523       13672.091764   \n",
-       "4  6          11.180284         227.231469       25484.508491   \n",
+       "                 1  8.316765884214679  214.3733940856225  22018.41744077529  \\\n",
+       "count  2009.000000        2009.000000        2009.000000        2009.000000   \n",
+       "mean   1006.000000           7.086581         195.960048       21904.616822   \n",
+       "std     580.092665           1.572955          32.648709        8627.545029   \n",
+       "min       2.000000           0.227499          73.492234         320.942611   \n",
+       "25%     504.000000           6.090016         176.736376       15613.160533   \n",
+       "50%    1006.000000           7.027297         197.191839       20920.251561   \n",
+       "75%    1508.000000           8.052894         216.454108       27172.893573   \n",
+       "max    2010.000000          14.000000         317.338124       56488.672413   \n",
        "\n",
-       "   8.05933237743854  356.88613564305666  363.2665161642437  \\\n",
-       "0          6.546600          310.135738         398.410813   \n",
-       "1          7.544869          326.678363         280.467916   \n",
-       "2          7.513408          393.663396         283.651634   \n",
-       "3          4.563009          303.309771         474.607645   \n",
-       "4          9.077200          404.041635         563.885481   \n",
+       "       8.05933237743854  356.88613564305666  363.2665161642437  \\\n",
+       "count       2009.000000         2009.000000        2009.000000   \n",
+       "mean           7.133862          333.199592         426.508172   \n",
+       "std            1.585474           41.217984          80.709632   \n",
+       "min            1.390871          129.000000         201.619737   \n",
+       "25%            6.137757          307.621462         366.802484   \n",
+       "50%            7.140122          332.196048         423.455906   \n",
+       "75%            8.110140          359.268543         482.294404   \n",
+       "max           13.127000          481.030642         753.342620   \n",
        "\n",
-       "   18.436524495493305  100.34167436508008  4.628770536837084  0  \n",
-       "0           11.558279           31.997993           4.075075  0  \n",
-       "1            8.399735           54.917862           2.559708  0  \n",
-       "2           13.789695           84.603556           2.672989  0  \n",
-       "3           12.363817           62.798309           4.401425  0  \n",
-       "4           17.927806           71.976601           4.370562  0  "
+       "       18.436524495493305  100.34167436508008  4.628770536837084            0  \n",
+       "count         2009.000000         2009.000000        2009.000000  2009.000000  \n",
+       "mean            14.355910           66.383822           3.969169     0.403186  \n",
+       "std              3.325352           16.067261           0.780527     0.490660  \n",
+       "min              2.200000            8.577013           1.450000     0.000000  \n",
+       "25%             12.120956           55.947322           3.442848     0.000000  \n",
+       "50%             14.322019           66.421884           3.966571     0.000000  \n",
+       "75%             16.682025           77.286551           4.513201     1.000000  \n",
+       "max             27.006707          124.000000           6.494749     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
